# Mi.Mary

./: .env.example  .gitignore  add_timeslots.py  data.json  manage.py  pyproject.toml
core/: admin.py  apps.py  context_processors.py  forms.py  mistral.py  models.py  signals.py  sitemap.py  telegram_bot.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_order_appointment_date.py  0002_timeslot.py  0003_alter_timeslot_options.py  0004_alter_timeslot_date_time_alter_timeslot_is_booked.py
mi_mary/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
static/js/: main.js
templates/: about.html  base.html  category_services.html  create_order.html  create_review.html  include_nav_menu.html  include_order_card.html  landing.html  order_detail.html  order_status_update.html  orders_list.html  password_reset_email.html  profile_detail.html  profile_update_form.html  robots.txt  service_list.html  thanks.html  users_login_registr.html  users_message.html
users/: admin.py  apps.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_avatar_customuser_birthday_and_more.py
